# Delta-tool

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: README.md  tests.yml
gendiff/: __init__.py  generate_diff.py  get_difference_representation.py  parse.py
gendiff/format_output/: __init__.py  convert_to_json.py  json.py  output_to_json.py  plain.py  stylish.py
gendiff/generate_diff/: diff_of_dicts.py  generate_diff.py  get_difference_representation.py  parse.py  parser.py
gendiff/scripts/: diff_of_dicts.py  gendiff.py  generate_diff.py
gendiff/scripts/format_output/: __init__.py  output_to_json.py  plain.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/: answer_for_json  test
